# test-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-postgres  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
parking_api/: asgi.py  urls.py  wsgi.py
parking_api/apps/core/: views.py
parking_api/apps/parking/: models.py  serializers.py  tests.py  urls.py  utils.py  views.py
parking_api/apps/parking/migrations/: 0001_initial.py
parking_api/settings/: dev.py  settings.py
